// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Heading default overflow 1`] = `
<h4
  className="Heading fontSize2 darkGray breakWord"
  id={null}
/>
`;

exports[`Heading overflow normal 1`] = `
<h4
  className="Heading fontSize2 darkGray"
  id={null}
/>
`;

exports[`Heading small 1`] = `
<h4
  className="Heading fontSize2 darkGray breakWord"
  id={null}
/>
`;

exports[`Heading small with id 1`] = `
<h4
  className="Heading fontSize2 darkGray breakWord"
  id="account-basics"
/>
`;

exports[`Heading xsmall with level 3 1`] = `
<h3
  className="Heading fontSize1 darkGray breakWord"
  id={null}
/>
`;
